--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 hir = { path = "../hir" }
 
 cranelift = "0.76.0"
+target-lexicon = "*" #Any version, as it is included by cranelift and we don't want a mismatch
