--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2018"
 hir = { path = "../hir" }
 
 cranelift = "0.76.0"
+cranelift-module = "*" #Any version that works with cranelift-object
+cranelift-object = "0.76.0"
+
 target-lexicon = "*" #Any version, as it is included by cranelift and we don't want a mismatch
