--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "hir"
+name = "common"
 version = "0.1.0"
+authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ast = { path = "../ast" }
-syntax = { path = "../syntax" }
-common = { path = "../common" }
